--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
+  "overrides": {
+    "lovable-tagger": {
+      "vite": "$vite"
+    }
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -77,7 +82,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
+    "lovable-tagger": "^1.1.6",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
