--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:3001
-REACT_APP_WS_URL=ws://localhost:3001
-REACT_APP_UPLOAD_URL=http://localhost:3001/upload
+VITE_API_URL=http://localhost:3001
+VITE_WS_URL=ws://localhost:3001
+VITE_UPLOAD_URL=http://localhost:3001/upload
 
 # Feature Flags
-REACT_APP_ENABLE_REALTIME=true
-REACT_APP_ENABLE_UPLOAD=true
-REACT_APP_ENABLE_NOTIFICATIONS=true
-REACT_APP_ENABLE_ANALYTICS=false
+VITE_ENABLE_REALTIME=true
+VITE_ENABLE_UPLOAD=true
+VITE_ENABLE_NOTIFICATIONS=true
+VITE_ENABLE_ANALYTICS=false
 
 # Development
-REACT_APP_DEBUG=true
+VITE_DEBUG=true
